--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 
+$grayMediumLight: #eaeaea;
+
 /* universal */
 
 html {
@@ -20,11 +22,14 @@ textarea {
 
 .center {
 	text-align: center;
+	hi {
+		margin-bottom: 10px;
+	}
 }
 
-.center h1 {
+/*.center h1 {
 	margin-bottom: 10px;
-}
+}*/
 
 /* typography */
 
@@ -45,7 +50,7 @@ h2 {
 	margin-bottom: 30px;
 	text-align: center;
 	font-weight: normal;
-	color: #999;
+	color: $grayLight;
 }
 
 p {
@@ -65,23 +70,44 @@ p {
 	padding-top: 9px;
 	font-weight: bold;
 	line-height: 1;
+	&:hover {
+		color: #fff;
+		text-decoration: none;
+	}
 }
 
-#logo:hover {
+/*#logo:hover {
 	color: #fff;
 	text-decoration: none;
-}
+}*/
 
 /* footer */
 
 footer {
 	margin-top: 45px;
 	padding-top: 5px;
-	border-top: 1px solid #eaeaea;
-	color: #999;
+	border-top: 1px solid $grayMediumLight;
+	color: $grayLight;
+	a {
+		color: $gray;
+		&:hover {
+			color: $grayDarker;
+		}
+	}
+	small {
+		float: left;
+	}
+	ul {
+		float: right;
+		list-style: none;
+		li {
+			float: left;
+			margin-left: 10px;
+		}
+	}
 }
 
-footer a {
+/*footer a {
 	color: #555;
 }
 
@@ -101,4 +127,4 @@ footer ul {
 footer ul li {
 	float: left;
 	margin-left: 10px;
-}
+}*/
