--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,14 @@
 @import "bootstrap";
 
+/* mixins, variables, etc */
+
 $grayMediumLight: #eaeaea;
+
+@mixin box_sizing {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
 
 /* universal */
 
@@ -22,14 +30,10 @@ textarea {
 
 .center {
 	text-align: center;
-	hi {
+	h1 {
 		margin-bottom: 10px;
 	}
 }
-
-/*.center h1 {
-	margin-bottom: 10px;
-}*/
 
 /* typography */
 
@@ -76,11 +80,6 @@ p {
 	}
 }
 
-/*#logo:hover {
-	color: #fff;
-	text-decoration: none;
-}*/
-
 /* footer */
 
 footer {
@@ -107,24 +106,55 @@ footer {
 	}
 }
 
-/*footer a {
-	color: #555;
+/* sidebar */
+
+aside {
+	section {
+		padding: 10px 0;
+		border-top: 1px solid $grayLighter;
+		&:first-child {
+			border: 0;
+			padding-top: 0;
+		}
+		span {
+			display: block;
+			margin-bottom: 3px;
+			line-height: 1;
+		}
+		h1 {
+			font-size: 1.4em;
+			text-align: left;
+			letter-spacing: -1px;
+			margin-bottom: 3px;
+			margin-top: 0px;
+		}
+	}
 }
 
-footer a:hover {
-	color: #222;
-}
-
-footer small {
+.gravatar {
 	float: left;
+	margin-right: 10px;
 }
 
-footer ul {
-	float: right;
-	list-style: none;
+/* forms */
+
+input, textarea, select, .uneditable-input {
+	border: 1px solid #bbb;
+	width: 100%;
+	margin-bottom: 15px;
+	@include box_sizing;
 }
 
-footer ul li {
+input {
+	height: auto !important;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+	clear: both;
 	float: left;
-	margin-left: 10px;
-}*/
+	width: 100%;
+	margin-top: 45px;
+	@include box_sizing;
+}
