--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,5 +19,7 @@
 
 			<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
 		<% end %>
+
+		<p>Already registered? <%= link_to "Sign in!", signin_path %></p>
 	</div>
 </div>
